2004-11-08  Dan Winship  <danw@novell.com>

	* en/Gtk/Box.xml:
	* en/Gtk/ButtonBox.xml:
	* en/Gtk/Container.xml:
	* en/Gtk/Fixed.xml:
	* en/Gtk/Layout.xml:
	* en/Gtk/Menu.xml:
	* en/Gtk/Notebook.xml:
	* en/Gtk/Paned.xml:
	* en/Gtk/Table.xml:
	* en/Gtk/Toolbar.xml: document container child properties

2004-11-05 Mike Kestner <mkestner@ximian.com>

	* Makefile.am : copy assemblies into updater so they don't
	have to be installed to run the updater.
	* updater/updater.cs : fix for recent corlib bugfix. Thanks
	to Dan Winship for identifying the solution.

2004-10-28  Dan Winship  <danw@novell.com>

	* en/Gdk/Pixbuf.xml
	* en/Gdk/Pixmap.xml
	* en/Gdk/Window.xml
	* en/Gtk/Style.xml
	* en/Gtk/TargetList.xml: Update to match API fixes

2004-10-11 Shane Landrum <epicene@pobox.com>

	* en/Gdk/AreaUpdatedArgs.xml
	* en/Gdk/SizePreparedArgs.xml: Delegate class docs.
	
2004-10-11 Shane Landrum <epicene@pobox.com>

	* en/Gdk/Pixbuf.xml
	* en/Gdk/PixbufAlphaMode.xml
	* en/Gdk/PixbufAniAnim.xml
	* en/Gdk/PixbufAniAnimIter.xml
	* en/Gdk/PixbufDestroyNotify.xml
	* en/Gdk/PixbufError.xml
	* en/Gdk/PixbufFormat.xml
	* en/Gdk/PixbufFrame.xml: Miscellaneous docs for pixbuf classes.
	
2004-09-25 Shane Landrum <epicene@pobox.com>

	* en/Gdk/Drawable.xml
	* en/Gdk/Pixbuf.xml
	* en/Gdk/PixbufAlphaMode.xml
	* en/Gdk/PixbufAniAnim.xml
	* en/Gdk/PixbufAniAnimIter.xml
	* en/Gdk/PixbufAnimation.xml
	* en/Gdk/PixbufAnimationIter.xml: Docs for pixbufs and animations.
	A first pass; see FIXME marks for some API that may need adjustment.
	
2004-09-23 Mike Kestner <mkestner@ximian.com>

	* en/Gtk/Widget.xml : docs for new OnSetScrollAdjustments VM.

2004-09-20 Shane Landrum <epicene@pobox.com>

	* en/Gdk/FilterFunc.xml
	* en/Gdk/Point.xml
	* en/Gdk/Region.xml
	* en/Gdk/Rgb.xml
	* en/Gdk/RgbCmap.xml : Added docs for Gdk classes.
	
2004-09-20 Shane Landrum <epicene@pobox.com>
	
	* en/Gtk/FileSelection.xml
	* en/Gtk/MapEventArgs.xml
	* en/Gtk/ModuleDisplayInitFunc.xml
	* en/Gtk/ModuleInitFunc.xml