@@ -4148,4 +4148,20 @@ Widgets are required to honor the size allocation they receive; a size request i
         <param name="label">a <see cref="T:Gtk.Widget" /></param>
         <remarks>To be added</remarks>
       </Docs>
+    </Member><Member MemberName="CreateNativeObject">
+      <MemberSignature Language="C#" Value="protected override void CreateNativeObject (string [] names, GLib.Value[] vals);" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Void</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="names" Type="System.String[]" />
+        <Parameter Name="vals" Type="GLib.Value[]" />
+      </Parameters>
+      <Docs>
+        <summary>Creates the GObject underlying a managed <see cref="T:Gtk.Widget"/> subclass</summary>
+        <param name="names">an array of (GObject) property names</param>
+        <param name="vals">the values for the properties identified by <paramref name="names"/></param>
+        <remarks>See <see cref="M:GLib.Object.CreateNativeObject"/> for more details. This overridden method also sets up event handlers on the object to ensure that the wrapper object always stays alive when the widget is contained by another widget (even when it is contained by an unmanaged widget that doesn't know about its managed wrapper).</remarks>
+      </Docs>
     </Member></Members></Type>
