@@ -1,3 +1,8 @@
+2004-11-09  Dan Winship  <danw@novell.com>
+
+	* en/GLib/Object.xml: 
+	* en/Gtk/Widget.xml: update for CreateNativeObject changes
+
 2004-11-08  Dan Winship  <danw@novell.com>
 
 	* en/Gtk/Box.xml:
